# leetcode

./: .gitignore  README.md  build.gradle.kts
cpp/: 100.cpp  1004.cpp  104.cpp  124.cpp  128.cpp  1329.cpp  151.cpp  152.cpp  165.cpp  1740.cpp  1768.cpp  191.cpp  200.cpp  2011.cpp  217.cpp  236.cpp  242.cpp  28.cpp  2918.cpp  295.cpp  3346.cpp  3397.cpp  342.cpp  347.cpp  389.cpp  438.cpp  443.cpp  48.cpp  49.cpp  588.cpp  61.cpp  66.cpp  67.cpp  69.cpp  70.cpp  71.cpp  75.cpp  763.cpp  77.cpp  79.cpp  (+12 more)
go/: go.mod  staticcheck.conf
go/solutions/: 0027_test.go  0028_test.go  0033_test.go  0034_test.go  0045_test.go  0046_test.go  0088_test.go  0101_test.go  0102_test.go  0103_test.go  0121_test.go  0169_test.go  103_test.go  121_test.go  27_test.go  29_test.go  36_test.go  88_test.go
kotlin/: build.gradle.kts
python/: pyproject.toml
python/leetcode/: 1071.py  1114.py  1115.py  1116.py  15.py  16.py  17.py  1768.py  18.py  19.py  20.py  2140.py  47.py
rust/src/: _21.rs  _22.rs  _23.rs  _24.rs  _25.rs  _26.rs  lib.rs
rust/src/util/: list.rs
shell/192/: 192.sh
shell/193/: 193.sh
shell/194/: 194.sh
shell/195/: 195.sh
src/main/kotlin/: 10_RegexMatching.kt  13_RomanToInt.kt  1_TwoSums.kt  3_LongestSubstring.kt  4_MedianSortedArray.kt  6_ZigZag.kt  7_ReverseInteger.kt  8_Atoi.kt  9_PalindromeNumbers.kt
typescript/: jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/: 2618.test.ts  2618.ts  2619.test.ts  2619.ts  2620.test.ts  2620.ts  2621.test.ts  2621.ts  2622.test.ts  2622.ts  2623.ts  2624.test.ts  2624.ts
(+75 files in other folders)
