[project]
name = "leetcode"
version = "1.0.0"
description = "Leetcode"
authors = [{ name = "Axel Pettersson", email = "axel@pettersson.cc" }]

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
explicit_package_bases = true
